testsuite/lab2-testsuite/good/predecrement.cc
int main() {
  let int j = 22;
  let int k = 23;
  --j;
  printInt(j);
  printInt(--k);
  return 0;
}
